Fix crash when clearing the untagged tag via settings

BUG: 477529